--- a/index.html
+++ b/index.html
@@ -1,14 +1,26 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-  <title>Countdown Timer</title>
-  <link rel="stylesheet" type="text/css" href="styles.css">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Countdown to Iceland Trip</title>
+  <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-  <div class="countdown-container">
-    <div class="countdown" id="countdown"></div>
+  <div class="countdown">
+    <div>
+      <span id="days">0</span> days
+    </div>
+    <div>
+      <span id="hours">0</span> hours
+    </div>
+    <div>
+      <span id="minutes">0</span> minutes
+    </div>
+    <div>
+      <span id="seconds">0</span> seconds
+    </div>
   </div>
-  
   <script src="script.js"></script>
 </body>
 </html>
